--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "arweave": "^1.15.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.11.10",
     "lucide-react": "^0.453.0",
     "next": "15.0.0",
     "react": "19.0.0-rc-65a56d0e-20241020",
