--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
     "arweave": "^1.15.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.11.10",
-    "lucide-react": "^0.453.0",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.454.0",
     "next": "15.0.0",
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
+    "react-force-graph-2d": "^1.25.7",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-markdown-editor-lite": "^1.3.4",
+    "reactflow": "^11.11.4",
     "rehype-raw": "^7.0.0",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.0",
@@ -37,6 +41,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
