--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.454.0",
     "next": "15.0.0",
-    "react": "19.0.0-rc-65a56d0e-20241020",
-    "react-dom": "19.0.0-rc-65a56d0e-20241020",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-force-graph-2d": "^1.25.7",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
