--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@permaweb/aoconnect": "^0.0.59",
+    "@permaweb/aoprofile": "^0.0.9",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
@@ -45,6 +46,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cors-anywhere": "^0.4.4",
     "eslint": "^8",
     "eslint-config-next": "15.0.0",
     "postcss": "^8",
