--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ar.io/sdk": "^3.9.1",
+    "@ardrive/turbo-sdk": "^1.23.2",
     "@permaweb/aoconnect": "^0.0.59",
-    "@radix-ui/react-avatar": "^1.1.1",
+    "@permaweb/aoprofile": "^0.0.9",
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.1.2",
@@ -22,7 +26,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@vela-ventures/aosync-sdk-react": "^1.0.25",
     "arweave": "^1.15.5",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.11.10",
@@ -39,7 +43,8 @@
     "rehype-raw": "^7.0.0",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.0",
-    "tailwind-merge": "^2.5.4",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
