[bug]: added vercel.json file update 2

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "build": {
-      "installCommand": "npm install --legacy-peer-deps"
+      "command": "npm run vercel-build"
     }
   }
   
