[bug]: added vercel.json file update 5

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,4 @@
 {
-    "build": {
-      "installCommand": "npm install --legacy-peer-deps",
-      "buildCommand": "npm run build"
-    }
-  }
+  "buildCommand": "npm install --legacy-peer-deps && npm run build"
+}
   
