--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-  "buildCommand": "npm install --legacy-peer-deps && npm run build"
+  "buildCommand": "npm install --legacy-peer-deps --include=dev && npm run build"
 }
   
