--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "perma-tell",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ar.io/sdk": "^3.9.1",
+    "@ar.io/sdk": "^3.6.0",
     "@ardrive/turbo-sdk": "^1.23.2",
+    "@emotion/is-prop-valid": "^1.3.1",
     "@permaweb/aoconnect": "^0.0.59",
     "@permaweb/aoprofile": "^0.0.9",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -25,7 +26,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@vela-ventures/aosync-sdk-react": "^1.0.25",
-    "arweave": "^1.15.5",
+    "arweave": "^1.15.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -48,14 +49,30 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/plugin-transform-modules-commonjs": "^7.26.3",
+    "@babel/preset-env": "^7.26.9",
     "@types/lodash": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "assert": "^2.1.0",
+    "babel-loader": "^10.0.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "postcss": "^8",
+    "process": "^0.11.10",
+    "querystring-es3": "^0.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "url": "^0.11.4"
   }
 }
